--- a/index.html
+++ b/index.html
@@ -1,25 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <title>Quiz</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Latest compiled and minified CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+  <!--google fonts-->
+  <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
+  <!--bootstr css-->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+  <!--Awesome Icons-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- My CSS -->
   <link rel="stylesheet" href="css/styles.css">
-  <!-- jQuery library -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!-- My new CSS compiled SCSS-->
+   <!--<link rel="stylesheet" href="css/output.css">-->
+  <!--CDN versions of jQuery and Popper.js -->
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 
-  <!-- Popper JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
+  <!--Bootstrap js-->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+  <!--My js code-->
+  <script src="js/myscript.js"></script>
 
-  <!-- Latest compiled JavaScript -->
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
 </head>
-<div class="container">
-  <h1>My First Bootstrap Page</h1>
-  <p>This is some text.</p>
+<body>
+<div class="container-fluid">
+  <div class="row row-header align-items-center justify-content-center">
+    <div class="col col-auto">
+      <h2>What is the country with its capital in Pekin?</h2>
+    </div>
+  </div>
+  <div class="row row-q justify-content-center text-center">
+    <div class="col col-9">
+    <a href="#">China</a>
+    </div>
+    <div class="col col-9">
+    <a href="#">Marocco</a>
+    </div>
+    <div class="col col-9">
+    <a href="#">Nikaragua</a>
+    </div>
+  </div>
+  <div class="row row-f align-items-end text-center">
+    <div class="col">
+      <button type="submit" class="btn n-a">Back</button>
+    </div>
+    <div class="col d-block" style='padding-top:20px;'>
+      1/7
+    </div>
+    <div class="col">
+      <button type="submit" class="btn">Next</button>
+    </div>
+  </div>
 </div>
+</body>
 </html>
