--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
 <div class="container-fluid">
   <div class="row row-header align-items-center justify-content-center">
     <div class="col col-auto">
-      <h2>What is the country with its capital in Pekin?</h2>
+      <h2 class="question"></h2>
     </div>
   </div>
-  <div class="row row-q justify-content-center text-center">
-    <div class="col col-9">
-    <a href="#">China</a>
+  <div class="row row-a justify-content-center text-center">
+    <div class="col col-9 choice-1">
+    <a href="#"></a>
     </div>
-    <div class="col col-9">
-    <a href="#">Marocco</a>
+    <div class="col col-9 choice-2">
+    <a href="#"></a>
     </div>
-    <div class="col col-9">
-    <a href="#">Nikaragua</a>
+    <div class="col col-9 choice-3">
+    <a href="#"></a>
     </div>
   </div>
   <div class="row row-f align-items-end text-center">
