redone  for inputs

--- a/index.html
+++ b/index.html
@@ -32,14 +32,28 @@
     </div>
   </div>
   <div class="row row-a justify-content-center text-center">
-    <div class="col col-9 choice-1">
-    <a href="#"></a>
-    </div>
-    <div class="col col-9 choice-2">
-    <a href="#"></a>
-    </div>
-    <div class="col col-9 choice-3">
-    <a href="#"></a>
+    <div class="col col-9">
+      <fieldset class="form-group">
+      <!--<legend>Radio buttons</legend>-->
+      <div class="form-check">
+        <label class="form-check-label">
+          <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios1" value="option1">
+          Option one
+        </label>
+      </div>
+      <div class="form-check">
+      <label class="form-check-label">
+          <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios2" value="option2">
+          Option two
+        </label>
+      </div>
+      <div class="form-check">
+      <label class="form-check-label">
+          <input type="radio" class="form-check-input" name="optionsRadios" id="optionsRadios3" value="option3">
+          Option three
+        </label>
+      </div>
+    </fieldset>
     </div>
   </div>
   <div class="row row-f align-items-end text-center">
@@ -50,7 +64,7 @@
       1/7
     </div>
     <div class="col">
-      <button type="submit" class="btn">Next</button>
+      <button type="submit" class="btn next-button">Next</button>
     </div>
   </div>
 </div>
